--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -29,7 +29,7 @@
                 <label for="basic-url" class="form-label">密码</label>
                 <div class="input-group mb-3">
                     <span class="input-group-text m-0 p-3 pt-1 pb-1" id="basic-addon3"><i class="bi bi-gender-ambiguous"></i></span>
-                    <input type="password" class="form-control m-0 p-0 ps-1 text-666 fs-7" asp-for="Password" autocomplete="off" placeholder="请输入密码">
+                    <input type="password" class="form-control m-0 p-0 ps-1 text-666 fs-7" asp-for="Password" autocomplete="off" placeholder="请输入密码" value="aa123456">
                 </div>
             </div>
         </div>
