--- a/Pages/Plans/Index.cshtml
+++ b/Pages/Plans/Index.cshtml
@@ -1,4 +1,185 @@
 ﻿@page
 @model RubyMine.Pages.Plans.IndexModel
+@using Version = RubyMine.Models.Version;
 @{
+    var showFlag = "show";
+    var activeFlag = "active";
 }
+<style>
+    .vertical-text {
+        transform: rotate(180deg);
+        /*transform-origin: left top 0;*/
+        writing-mode: vertical-rl;
+        text-orientation: mixed;
+    }
+    .accordion-button::after {
+        width: 0.75rem !important;
+        height: 0.75rem !important;
+        background-size: 0.75rem !important;
+        background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
+        margin-left:unset;
+    }
+    .accordion-button:not(.collapsed)::after {
+        transform:rotate(0deg) !important;
+    }
+    .btn-locked {
+        /*text-decoration: line-through !important;*/
+        color: #ccc;
+    }
+</style>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2">
+            <div class="row">
+                <div class="lh-0 col border-1 border-ccc border-bottom-0 bg-title ps-1 pt-2 pb-2">
+                    <!-- LinkButton trigger modal -->
+                    版本计划<a href="#Temp"><span class="float-end fs-7" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><i class="bi bi-plus-lg fs-7"></i>&nbsp;新建版本</span></a>
+                </div>
+            </div>
+            <div class="row fs-7">
+                <div class="col border-1 border-ccc p-1">
+                    <div class="d-flex align-items-start">
+                        <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                            @foreach (var project_id in Model.Version.Select(x => x.ProjectId).Distinct()) {
+                                <a class="nav-link @activeFlag p-2 mt-1 text-269 text-decoration-none vertical-text" id="v-pills-home-tab-@project_id" data-bs-toggle="pill" data-bs-target="#v-pills-home-@project_id" type="button" role="tab" aria-controls="v-pills-home-@project_id" aria-selected="true">@Model.Project.FirstOrDefault(x => x.Id == project_id).Name</a>
+                                activeFlag = "";
+                            }
+                        </div>
+                        <div class="tab-content w-100" id="v-pills-tabContent">
+                            @foreach (var project_id in Model.Version.Select(x => x.ProjectId).Distinct()) {
+                                activeFlag = "active";
+                                <div class="tab-pane fade @showFlag @activeFlag" id="v-pills-home-@project_id" role="tabpanel" aria-labelledby="v-pills-home-tab-@project_id">
+                                    <div class="accordion accordion-flush h-25 overflow-hidden" id="accordionFlushExample-@project_id">
+                                        @foreach (Version item in Model.Version.Where(x => x.ProjectId == project_id || x.Sharing.Equals("system"))) {
+                                            showFlag = "";
+                                            activeFlag = "";
+                                            <div class="accordion-item">
+                                                <h2 class="accordion-header" id="flush-headingOne-@item.Id">
+                                                    <button class="accordion-button btn-@item.Status collapsed m-0 p-1 fs-7" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne-@item.Id" aria-expanded="false" aria-controls="flush-collapseOne-@item.Id">
+                                                        @{
+                                                            var showEffectiveDate = "";
+                                                            var showEffectiveDateClass = "";
+                                                            var showBiClass = "bi-cursor text-success";
+                                                            var showBiTitle = "";
+                                                            if (item.EffectiveDate != null) {
+                                                                showEffectiveDate = item.EffectiveDate.Value.ToString("yyyy-MM-dd");
+                                                                if (DateTime.Now.CompareTo(item.EffectiveDate.Value) > 0) {
+                                                                    showEffectiveDateClass = "text-danger";
+                                                                    showBiClass = "text-danger bi-exclamation-triangle-fill";
+                                                                    showBiTitle = "警告：版本计划已超时！";
+                                                                }
+                                                            }
+                                                            if (item.Sharing.Equals("system")) {
+                                                                <span class="mr-2 fw-bold text-269">@item.Name</span>@Html.Raw("&nbsp;LTS")
+                                                                <span class="ms-auto text-269">
+                                                                    <i class="bi bi-pin-fill"></i> @Html.Raw("&nbsp;")
+                                                                </span>
+                                                            } else if (item.Status.Equals("locked")) {
+                                                                <span class="mr-2">@item.Name</span><span>@showEffectiveDate</span>
+                                                                <i class="bi bi-lock ms-auto"></i> @Html.Raw("&nbsp;&nbsp;")
+                                                            } else {
+                                                                <span class="mr-2 fw-bold text-269">@item.Name</span>
+                                                                <span class="ms-auto @showEffectiveDateClass" title="@showBiTitle">
+                                                                    @showEffectiveDate <i class="bi @showBiClass ms-auto"></i> @Html.Raw("&nbsp;")
+                                                                </span>
+                                                            }
+                                                        }
+                                                    </button>
+                                                </h2>
+                                                <div id="flush-collapseOne-@item.Id" class="accordion-collapse collapse" aria-labelledby="flush-headingOne-@item.Id" data-bs-parent="#accordionFlushExample-@project_id">
+                                                    <div class="accordion-body p-1 text-secondary">
+                                                        <div class="mb-3 row">
+                                                            <label for="staticEmail" class="col col-form-label">计划完成</label>
+                                                            <div class="col">
+                                                                <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="@item.EffectiveDate">
+                                                            </div>
+                                                        </div>
+                                                        @item.Description
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        }                        
+                                    </div>
+                                </div>
+                            }                       
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <table id="mainTable" class="table table-hover lh-1 fs-7 border-1 border-ccc">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
+        <div class="col-3 p-0">
+            <table id="mainTable" class="table table-hover lh-1 fs-7 border-1 border-ccc">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade fs-7" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" style="width:600px !important;margin-top:-6%;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="modal-title fw-bold text-269" id="staticBackdropLabel">新建版本</span>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <table>
+                    <tr>
+                        <td>项目&nbsp;<span class="text-danger fw-bold">*</span></td>
+                        <td>
+                            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>版本号&nbsp;<span class="text-danger fw-bold">*</span></td>
+                        <td>
+                            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>版本号&nbsp;<span class="text-danger fw-bold">*</span></td>
+                        <td>
+                            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>版本号&nbsp;<span class="text-danger fw-bold">*</span></td>
+                        <td>
+                            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>版本号&nbsp;<span class="text-danger fw-bold">*</span></td>
+                        <td>
+                            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>版本号&nbsp;<span class="text-danger fw-bold">*</span></td>
+                        <td>
+                            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary fs-7">保存</button>
+                <button type="button" class="btn btn-secondary fs-7" data-bs-dismiss="modal">取消</button>
+            </div>
+        </div>
+    </div>
+</div>
