--- a/wwwroot/lib/bootstrap-5.0.2-dist/css/bootstrap.css
+++ b/wwwroot/lib/bootstrap-5.0.2-dist/css/bootstrap.css
@@ -6628,9 +6628,18 @@ textarea.form-control-lg {
   max-height: 100% !important;
 }
 
+.vh-60 {
+    height: 60vh !important;
+}
+
 .vh-100 {
   height: 100vh !important;
 }
+
+.min-vh-60 {
+    min-height: 60vh !important;
+}
+
 
 .min-vh-100 {
   min-height: 100vh !important;
