--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -62,6 +62,9 @@
                                             <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Clocks")" asp-area="" asp-page="/Clocks/Index">工时统计</a>
                                         </li>
                                         <li class="nav-item">
+                                            <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Creation")" asp-area="" asp-page="/Creation/Index">新产品研发</a>
+                                        </li>
+                                        <li class="nav-item">
                                             <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Versions")" asp-area="" asp-page="/Versions/Index">版本管理</a>
                                         </li>
                                         <li class="nav-item">
