--- a/Pages/Shared/_ManagementLayout.cshtml
+++ b/Pages/Shared/_ManagementLayout.cshtml
@@ -72,6 +72,9 @@
                                     <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Clocks/Index">工时统计</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link text-decoration-none text-white fs-7 asp-area="" asp-page="/Creation/Index">新产品研发</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Versions/Index">版本管理</a>
                                 </li>
                                 <li class="nav-item">
