--- a/Pages/Versions/Index.cshtml
+++ b/Pages/Versions/Index.cshtml
@@ -4,65 +4,108 @@
 }
 <div class="container-fluid">
     <div class="row">
+        <div class="col-2 ps-0">
+            <div class="container ms-0 ps-2 pr-2">
+                <div class="row border-1 border-ccc bg-title">
+                    <div class="col">
+                        项目列表
+                    </div>
+                </div><form id="frmVersion" method="get">
+                    <div class="row border-1 border-ccc border-top-0 pb-lg-5">
+                        <div class="col p-3">
+                            <table class="fs-7">
+                                <tr>
+                                    <td width="60px">版本号</td>
+                                    <td><input type="text" class="form-control fs-7" aria-label="" placeholder="Ctrl+F"></td>
+                                </tr>
+                                <tr>
+                                    <td>产品线</td>
+                                    <td>
+                                        <select class="form-select fs-7 mb-1 w-auto" aria-label="" asp-for="project_id" onchange="$('#frmVersion').submit();">
+                                            <option value="">全部</option>
+                                            @foreach (RubyMine.Models.Project item in Model.Project) {
+                                                <option value="@item.Id">@item.Name</option>
+                                            }
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>状态</td>
+                                    <td>
+                                        <select class="form-select fs-7 mb-1 w-auto" aria-label="" asp-for="status" onchange="$('#frmVersion').submit();">
+                                            <option value="">全部</option>
+                                            <option value="open">开发中</option>
+                                            <option value="locked">已发布</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                @*<tr>
+                                    <td>计划完成</td>
+                                    <td>
+                                        <input type="date" class="form-control fs-7"/>
+                                    </td>
+                                </tr>*@
+                            </table>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
         <div class="col border-1 border-ccc">
             <div class="row">
                 <div class="col bg-title ps-1 border-bottom border-ccc">
-                    版本计划<a href="#Temp" class="mt-3"><span class="float-end fs-7" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><i class="bi bi-plus-lg fs-7"></i>&nbsp;新建版本</span></a>
+                    版本&nbsp;<span class="fs-7 text-269">(&nbsp;@Model.Version.Count&nbsp;)</span><a href="#Temp" class="float-end fs-7 pt-1"><span data-bs-toggle="modal" data-bs-target="#staticBackdrop"><i class="bi bi-plus-lg fs-7"></i>&nbsp;新建版本</span></a>
                 </div>
-                <div class="row fs-7 pr-0">
-                    <div class="col p-1">
-                        <table id="mainTable" class="table table-hover lh-1 fs-7 border-1 border-ccc">
-                            <thead>
-                                <tr style="background:#eee;">
-                                    <th>#</th>
-                                    <th>@Html.DisplayNameFor(model => model.Version[0].ProjectId)</th>
-                                    <th>@Html.DisplayNameFor(model => model.Version[0].Name)</th>
-                                    <th>@Html.DisplayNameFor(model => model.Version[0].Description)</th>
-                                    <th>@Html.DisplayNameFor(model => model.Version[0].CreatedOn)</th>
-                                    <th>@Html.DisplayNameFor(model => model.Version[0].EffectiveDate)</th>
-                                    <th>@Html.DisplayNameFor(model => model.Version[0].Status)</th>
-                                    <th>@Html.DisplayNameFor(model => model.Version[0].Status)</th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                    <th></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var item in Model.Version) { 
-                                <tr>
-                                    <td>@item.Id</td>
-                                    <td>@item.ProjectId</td>
-                                    <td>@item.Name</td>
-                                    <td>@item.Description</td>
-                                    <td>@item.CreatedOn</td>
-                                    <td>@item.EffectiveDate</td>
-                                    <td>@item.Status</td>
-                                    <td>@item.Status</td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
+            </div>
+            <div class="row fs-7 pr-0">
+                <div class="col p-1">
+                    <table id="mainTable" class="table table-hover lh-1 fs-7 border-1 border-ccc">
+                        <thead>
+                            <tr style="background:#eee;">
+                                <th class="border-ccc text-666">#</th>
+                                <th class="border-ccc text-666">公司产品线</th>
+                                <th class="border-ccc text-666">版本号</th>
+                                <th class="border-ccc text-666">状态</th>
+                                <th class="border-ccc text-666">计划完成</th>
+                                <th class="border-ccc text-666">版本描述</th>
+                                <th class="border-ccc text-666">创建于</th>
+                                <th class="border-ccc text-666">是否共享</th>
+                                <th class="border-ccc text-666">编辑</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.Version) {
+                                var htmlClass = "";
+                                var htmlIcon = "";
+                                switch (item.Status) {
+                                    case "open":
+                                        htmlClass = "text-269";
+                                        htmlIcon = "bi-cursor";
+                                        break;
+                                    case "locked":
+                                        htmlClass = "text-secondary";
+                                        htmlIcon = "bi-lock";
+                                        break;
                                 }
-                            </tbody>
-                        </table>
-                    </div>
+                                <tr class="@htmlClass">
+                                    <td>@item.Id</td>
+                                    <td>@item.Project.Name</td>
+                                    <td>
+                                        <a href="#Temp" class="@htmlClass"><i class="bi @htmlIcon ms-auto"></i>@item.Name</a>
+                                    </td>
+                                    <td>
+                                        <a href="#Temp" class="@htmlClass">@RMUtils.ParseVersionStatus(item.Status)</a>
+                                    </td>
+                                    <td>@RMUtils.ParseDate(item.EffectiveDate)</td>
+                                    <td>@item.Description</td>
+                                    <td>@RMUtils.ParseDate(item.CreatedOn,true)</td>
+                                    <td>@RMUtils.ParseVersionSharing(item.Sharing)</td>
+                                    <td><a href="#Temp" class="text-269"><i class="bi bi-pencil"></i></a></td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
                 </div>
             </div>
-        </div>
-        <div class="col-3">
-            <div class="lh-0 col border-1 border-ccc border-bottom-0 bg-title ps-1 pt-2 pb-2">
-                项目列表
-            </div>
-            <table id="mainTable" class="table table-hover lh-1 fs-7 border-1 border-ccc">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                    </tr>
-                </thead>
-            </table>
         </div>
     </div>
