--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -73,3 +73,39 @@ body {
 .bg-title {
     background-color:#EAF2F5 !important;
 }
+th[htmlValue="issue"], td[htmlValue="issue"] {
+    border: solid 1px #d7d7d7;
+    padding: 5px !important;
+}
+
+/*Issue*/
+th[htmlValue="issue"] {
+    padding: 8px !important;
+}
+/*待实施反馈*/
+.issue_subject_3 {
+    color: blue !important;
+}
+/*功能已发布*/
+.issue_subject_9 {
+    color: #2a8a29 !important;
+}
+/*已澄清*/
+.issue_subject_15 {
+    color: #ccc !important;
+    text-decoration-line: line-through !important;
+}
+
+.issue_subject_14 {
+    color: #bb5656 !important;
+    text-decoration-line: line-through !important;
+}
+/*历史遗留*/
+.issue_subject_19 {
+    color: #ccc !important;
+}
+/*重复登记*/
+.issue_subject_21 {
+    color: #b46b6b !important;
+    text-decoration: line-through !important;
+}
